# Git-Rustico

./: .gitignore  README.md
git/: .gitignore  Cargo.toml  gitconfig  gitconfigclient  gitconfigserver  tareas.md  testdirmaster
git/src/: api.rs  commands.rs  config.rs  consts.rs  controllers.rs  errors.rs  git_server.rs  git_transport.rs  lib.rs  main.rs  models.rs  servers.rs  util.rs  view.rs  views.rs
git/src/api/: api_client.rs  endpoint.rs  http_operation.rs  pr_info.rs  pr_operation.rs
git/src/client/: main.rs
git/src/commands/: add.rs  branch.rs  cat_file.rs  check_ignore.rs  checkout.rs  clone.rs  commit.rs  config.rs  errors.rs  fetch.rs  fetch_head.rs  hash_object.rs  init.rs  log.rs  ls_files.rs  ls_tree.rs  merge.rs  pull.rs  pull_request.rs  push.rs  rebase.rs  remote.rs  rm.rs  show_ref.rs  status.rs  tag.rs
git/src/controllers/: controller_client.rs
git/src/git_server/: client_references.rs  errors.rs  git_request.rs  handle_references.rs  reference_information.rs  server.rs
git/src/git_transport/: advertised.rs  errors.rs  git_request.rs  negotiation.rs  references.rs  references_update.rs  request_command.rs
git/src/models/: client.rs
git/src/server/: main.rs
git/src/servers/: daemon_server.rs  errors.rs  http_server.rs  server.rs
git/src/util/: advertised.rs  connections.rs  errors.rs  files.rs  formats.rs  git_request.rs  index.rs  log_file.rs  log_output.rs  logger.rs  negotiation.rs  objects.rs  (+6 more)
git/test_files/: FETCH_HEAD  config  config_3  config_4  config_5  test_head  test_head_write
git/tests/: integration_test.rs
(+17 files in other folders)
