[package]
name = "git"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { git = "https://github.com/gtk-rs/gtk3-rs.git" }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "client"
path = "bin/client.rs"

[[bin]]
name = "server"
path = "bin/server.rs"

[lib]
path = "src/lib.rs"

