[package]
name = "git"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { git = "https://github.com/gtk-rs/gtk3-rs.git" }
sha1 = "0.10.6"
chrono = "0.4.31"
flate2 = "1.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
serde-xml-rs = "0.6.0"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "client"
path = "bin/client.rs"

[[bin]]
name = "server"
path = "bin/server.rs"

[lib]
path = "src/lib.rs"

